# Biosynthetic_Potential

./: .gitignore  README.md  example.ipynb  genome.tsv  hits.tsv  pyproject.toml  requirements.txt
data/: compound_ec_database.tsv  taxonomy_mapping.tsv
data/genomes_ec/: TARA_ARC_108_MAG_00080.tsv  TARA_ARC_108_MAG_00083.tsv  TARA_ARC_108_MAG_00117.tsv  TARA_ARC_108_MAG_00139.tsv  TARA_ARC_108_MAG_00174.tsv  TARA_ARC_108_MAG_00179.tsv  TARA_ARC_108_MAG_00201.tsv
notebooks/: COCONUT_MongoDB.ipynb  example.ipynb
src/: modelseed.py  preprocessing.py
src/chemsearch/: preprocess.py  query.py
tests/: high_value_NPs.tsv  hits.tsv
