[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "chemsearch"
version = "0.0.0"
description = "Query genomes by chemical strutures"
license = "GPL-3.0"
authors = ["Semidán Robaina Estévez <semidan.robaina@gmail.com>"]
maintainers = ["Semidán Robaina Estévez <semidan.robaina@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Robaina/chemsearch"
repository = "https://github.com/Robaina/chemsearch"
documentation = "https://github.com/Robaina/chemsearch"
keywords = ["metabolism", "enzymes", "bioinformatics"]
classifiers = [
    "License :: OSI Approved :: GLP-3 License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Natural Language :: English",
]
packages = [{ include = "chemsearch", from = "src" }]
[tool.poetry.dependencies]
python = "^3.9"
